--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
     "axios": "^1.6.8",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "googleapis": "^134.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   }
 }
